--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "aot": false
           },
           "configurations": {
             "production": {
